Add mobile menu slider interactivity

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 body {
   display: grid;
   height: 100vh;
-  grid-template: auto 1fr/1fr;
+  grid-template: auto 1fr/0 1fr;
 }
 
 header, main {
@@ -116,7 +116,7 @@ main {
   flex-direction: column;
 }
 
-nav#primary_nav {
+nav#primary-nav {
   grid-row: span 2/2;
   position: sticky;
   z-index: 1;
@@ -126,6 +126,7 @@ nav#primary_nav {
 
 header#main-header {
   grid-row: span 2/2;
+  grid-column: 1;
   display: flex;
   gap: 1rem;
 }
@@ -135,9 +136,6 @@ header#main-header > * ~ * {
 
 form.search-bar {
   margin: 0 0.5rem 0 0;
-  max-width: 300px;
-  width: 100%;
-  flex-grow: 1;
   align-self: self-end;
   height: 1.5rem;
   padding: 0.25rem;
@@ -180,6 +178,9 @@ form.search-bar .search-icon {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    max-width: 300px;
+    width: 100%;
+    flex-grow: 1;
   }
   form.search-bar:hover {
     background-color: var(--light-gray);
@@ -459,7 +460,7 @@ time {
   footer {
     grid-column: 1/span 3;
   }
-  nav#primary_nav {
+  nav#primary-nav {
     width: 168px;
     grid-row: 1/span 2;
   }
@@ -477,20 +478,20 @@ time {
     grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
-nav#primary_nav, header#main-header {
+nav#primary-nav, header#main-header {
   height: 48px;
   align-items: end;
 }
-nav#primary_nav > *, header#main-header > * {
+nav#primary-nav > *, header#main-header > * {
   align-items: center;
 }
 
-nav#primary_nav button {
+nav#primary-nav button {
   position: sticky;
   z-index: 2;
 }
 
-nav#primary_nav ul.nav__links {
+nav#primary-nav ul.nav__links {
   position: absolute;
   z-index: 2;
   width: 300px;
@@ -498,7 +499,7 @@ nav#primary_nav ul.nav__links {
   flex-flow: column nowrap;
 }
 
-nav#primary_nav .nav__link {
+nav#primary-nav .nav__link {
   flex-grow: 1;
   height: 48px;
   border-radius: 0;
@@ -506,12 +507,12 @@ nav#primary_nav .nav__link {
   width: 100%;
 }
 
-nav#primary_nav .nav__link > a {
+nav#primary-nav .nav__link > a {
   margin: auto auto auto 1rem;
   padding: 0;
 }
 
-nav#primary_nav .nav__scrim {
+nav#primary-nav .nav__scrim {
   position: absolute;
   height: 100vh;
   background-color: var(--global-bg);
@@ -520,28 +521,67 @@ nav#primary_nav .nav__scrim {
   width: 300px;
 }
 
+/*--Mobile Navigation | Slider--*/
+nav#primary-nav.slider {
+  transform: translateX(-100vw);
+  -webkit-transform: translateX(-100vw);
+}
+
+nav#primary-nav.slide-out {
+  animation: slideOut 300ms 1 forwards;
+  -webkit-animation: slideOut 300ms 1 forwards;
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(-100vw);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideIn {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100vw);
+  }
+}
+.slide-in {
+  animation: slideIn 300ms 1 forwards;
+  -webkit-animation: slideIn 300ms 1 forwards;
+}
+
+/*-- 
+Desktop Navigation 
+--*/
 @media screen and (min-width: 768px) {
   header#main-header {
     margin: 1rem 0;
   }
-  nav#primary_nav button {
+  nav#primary-nav {
+    position: relative;
+    transform: translateX(0);
+  }
+  nav#primary-nav button {
     margin: 1rem 0 1rem 2rem;
   }
-  nav#primary_nav ul.nav__links {
+  nav#primary-nav ul.nav__links {
     position: relative;
     z-index: auto;
     width: auto;
     margin-left: 2rem;
   }
-  nav#primary_nav .nav__scrim {
+  nav#primary-nav .nav__scrim {
     display: none;
     visibility: hidden;
   }
-  nav#primary_nav .nav__link {
+  nav#primary-nav .nav__link {
     flex-grow: 1;
     border: none;
   }
-  nav#primary_nav .nav__link > a {
+  nav#primary-nav .nav__link > a {
     margin: auto auto auto 0;
   }
 }
