--- a/style.css
+++ b/style.css
@@ -69,11 +69,13 @@ aside {
   grid-row: 3/span 2;
   grid-column: 2;
   width: 100%;
+  visibility: hidden;
 }
 
 footer {
-  grid-column: 1/span 2;
-  background-color: var(--offwhite);
+  align-self: end;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 a {
@@ -110,8 +112,8 @@ h2 {
 }
 
 main {
-  grid-column: span 2;
-  grid-row: span 2;
+  grid-column: 2/span 2;
+  grid-row: span 1;
   display: flex;
   flex-direction: column;
 }
@@ -125,7 +127,8 @@ nav#primary-nav {
 }
 
 header#main-header {
-  grid-row: span 2/2;
+  grid-row: span 1/1;
+  grid-column: 2;
   display: flex;
   gap: 1rem;
 }
@@ -175,6 +178,7 @@ form.search-bar .search-icon {
 @media screen and (min-width: 768px) {
   form.search-bar {
     display: flex;
+    margin: 0 0.5rem 0 0.5rem;
     flex-flow: row nowrap;
     align-items: center;
     max-width: 300px;
@@ -365,7 +369,7 @@ header h1::after {
   border-radius: 0;
 }
 
-.email__details a::after {
+.email__details a::after, .email__details form::after {
   content: " ";
   position: absolute;
   cursor: pointer;
@@ -376,6 +380,32 @@ header h1::after {
   right: 0;
 }
 
+#view-email {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  opacity: 0;
+  color: transparent;
+}
+
+/*-- Add class to <main> On click --*/
+header#main-header, main {
+  transition: grid-column 0.5s;
+  transition-behavior: allow-discrete;
+}
+
+.list-resize {
+  grid-column: 2/span 1 !important;
+}
+
+.show {
+  visibility: visible;
+}
+
+/*-- Add class to <main> On click --*/
 .email__details h3 {
   display: inline-block;
   overflow-x: hidden;
@@ -444,27 +474,30 @@ time {
 
 @media screen and (min-width: 768px) {
   body {
-    grid-template: auto max-content 1fr/min-content auto 43.75vw;
+    grid-template: min-content max-content/min-content auto 43.75vw;
   }
   main {
     grid-row: 2/span 2;
-    grid-column: 2/span 1;
+    grid-column: 2/span 2;
   }
   aside {
     grid-row: 1/span 3;
     grid-column: 3;
+    z-index: 1;
     width: 100%;
   }
   footer {
-    grid-column: 1/span 3;
+    grid-column: 1/span 1;
+    grid-row: 3/span 1;
   }
   nav#primary-nav {
     z-index: 1;
     width: 168px;
     grid-row: 1/span 2;
+    grid-column: 1;
   }
   header#main-header {
-    grid-column: 2/span 1;
+    grid-column: 2/span 2;
     grid-row: 1;
   }
   .home__list p,
@@ -481,7 +514,7 @@ nav#primary-nav, header#main-header {
   height: 48px;
   align-items: start;
 }
-nav#primary-nav > *:not(#back-btn), header#main-header > *:not(#back-btn) {
+nav#primary-nav > *:not(#close-btn, #search), header#main-header > *:not(#close-btn, #search) {
   align-items: center;
   margin: auto;
 }
@@ -522,7 +555,7 @@ nav#primary-nav .nav__container {
   height: 100%;
 }
 
-#back-btn {
+#close-btn {
   position: absolute;
   top: 0;
   left: 0;
@@ -555,29 +588,26 @@ nav#primary-nav.slider {
   -webkit-transform: translateX(-100vw);
 }
 
-.slide-out {
+nav#primary-nav.slide-out {
   animation: slideOut 300ms 1 forwards;
   -webkit-animation: slideOut 300ms 1 forwards;
 }
 
-.slide-in {
+nav#primary-nav.slide-in {
   animation: slideIn 300ms 1 forwards;
   -webkit-animation: slideIn 300ms 1 forwards;
 }
 
 @keyframes slideOut {
-  0% {
-    transform: translateX(-100vw);
-  }
-  100% {
+  to {
     transform: translateX(0);
   }
 }
 @keyframes slideIn {
-  0% {
+  from {
     transform: translateX(0);
   }
-  100% {
+  to {
     transform: translateX(-100vw);
   }
 }
@@ -651,9 +681,9 @@ Desktop Navigation
   bottom: 0;
   right: 0;
   width: 100%;
-  height: calc(100% - 50px);
+  height: 100%;
   border: 1px solid var(--border);
-  background-color: var(--global-bg);
+  background-color: var(--offwhite);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
