--- a/style.scss
+++ b/style.scss
@@ -44,11 +44,13 @@ aside {
   grid-row: 3 / span 2;
   grid-column: 2;
   width: 100%;
+  visibility: hidden;
 }
 
 footer {
-  grid-column: 1 / span 2;
-  background-color: var(--offwhite);
+  align-self: end;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 a {
@@ -85,8 +87,8 @@ h2 {
 }
 
 main {
-  grid-column: span 2;
-  grid-row: span 2;
+  grid-column: 2 / span 2;
+  grid-row: span 1;
   display: flex;
   flex-direction: column;
 }
@@ -100,8 +102,8 @@ nav#primary-nav {
 }
 
 header#main-header {
-  grid-row: span 2 / 2;
-  // grid-column: 1;
+  grid-row: span 1 / 1;
+  grid-column: 2;
   display: flex;
   gap: 1rem;
   & > * ~ * {
@@ -146,6 +148,7 @@ form.search-bar .search-icon {
 @media screen and (min-width: 768px) {
   form.search-bar {
     display: flex;
+    margin: 0 0.5rem 0 0.5rem;
     flex-flow: row nowrap;
     align-items: center;
     max-width: 300px;
@@ -327,7 +330,7 @@ header h1::after {
   }
 }
 
-.email__details a::after {
+.email__details a::after, .email__details form::after {
     content: " ";
     position: absolute;
     cursor: pointer;
@@ -337,6 +340,33 @@ header h1::after {
     left: 0;
     right: 0;
 }
+
+#view-email {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  opacity: 0;
+  color: transparent;
+}
+
+/*-- Add class to <main> On click --*/ 
+header#main-header, main {
+  transition: grid-column 0.5s;
+  transition-behavior: allow-discrete;
+}
+
+.list-resize {
+  grid-column: 2 / span 1!important;
+}
+
+.show {
+  visibility: visible;
+}
+
+/*-- Add class to <main> On click --*/ 
 
 .email__details h3 {
   @include text-truncate;
@@ -397,27 +427,30 @@ time {
 
 @media screen and (min-width: 768px) {
   body {
-    grid-template: auto max-content 1fr/min-content auto calc(100vw * 56 / 128.0);
+    grid-template: min-content max-content / min-content auto calc(100vw * 56 / 128.0);
   }
   main {
     grid-row: 2 / span 2;
-    grid-column: 2 / span 1;
+    grid-column: 2 / span 2;
   }
   aside {
     grid-row: 1 / span 3;
     grid-column: 3;
+    z-index: 1;
     width: 100%;
   }
   footer {
-    grid-column: 1 /span 3;
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
   }
   nav#primary-nav {
     z-index: 1;
     width: 168px;
     grid-row: 1 / span 2;
+    grid-column: 1;
   }
   header#main-header {
-    grid-column: 2 / span 1;
+    grid-column: 2 / span 2;
     grid-row: 1;
   }
   .home__list p,
@@ -435,7 +468,7 @@ time {
 nav#primary-nav, header#main-header {
   height: 48px;
   align-items: start;
-  & > *:not(#back-btn) {
+  & > *:not(#close-btn, #search) {
     align-items: center;
     margin: auto;
   }
@@ -472,21 +505,13 @@ nav#primary-nav .nav__container {
   background-color: var(--offwhite);
 }
 
-// .nav__scrim > * {
-//   position: absolute;
-//   width: 100vw;
-//   height: 100vh;
-//   background: transparent;
-//   z-index: -1;
-// }
-
 /*--Mobile Navigation | Slider--*/
 
 #menu-btn {
   height: 100%;
 }
 
-#back-btn {
+#close-btn {
   position: absolute;
   top: 0;
   left: 0;
@@ -519,24 +544,34 @@ nav#primary-nav.slider {
   -webkit-transform: translateX(-100vw);
 }
 
-.slide-out {
+nav#primary-nav.slide-out {
   animation: slideOut 300ms 1 forwards;
   -webkit-animation: slideOut 300ms 1 forwards;
 }
 
-.slide-in {
+nav#primary-nav.slide-in {
   animation: slideIn 300ms 1 forwards;
   -webkit-animation: slideIn 300ms 1 forwards;
 }
 
+// div#email__content.slider > div.email__content {
+//   transform: translateX(150vw);
+//   -webkit-transform: translateX(150vw);
+// }
+
+// div#email__content.slider.slide-out > div.email__content {
+//   animation: slideOut 300ms 1 forwards;
+//   -webkit-animation: slideOut 300ms 1 forwards;
+// }
+
+
 @keyframes slideOut {
-  0% { transform: translateX(-100vw); }
-  100% { transform: translateX(0); }
+  to { transform: translateX(0); }
 }
 
 @keyframes slideIn {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100vw); }
+  from { transform: translateX(0); }
+  to { transform: translateX(-100vw); }
 }
 
 .fade-in ~ #scrim {
@@ -601,9 +636,9 @@ Desktop Navigation
   bottom: 0;
   right: 0;
   width: 100%;
-  height: calc(100% - 50px);
+  height: calc(100%);
   border: 1px solid var(--border);
-  background-color: var(--global-bg);
+  background-color: var(--offwhite);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
@@ -611,10 +646,6 @@ Desktop Navigation
   .email__content {
     border-left: 1px solid var(--border);
     width: calc(100vw * 56 / 128.0);
-    // height: calc(100vh * 178 / 192.0); // aspect-ratio 16 / 9
-    // width: calc(100vw * 56.25 / 192.0);  // aspect-ratio 9 / 16
-    // height: calc(100vh * 150 / 128.0); // 3 / 2
-    // width: calc(100vw * 66 / 128.0); // 2 / 3
     overflow: hidden;
   }
 }
