--- a/style.css
+++ b/style.css
@@ -130,10 +130,10 @@ header#main-header {
   grid-row: span 1/1;
   grid-column: 2;
   display: flex;
-  gap: 1rem;
 }
 header#main-header > * ~ * {
   border-radius: 0.5rem;
+  margin: auto;
 }
 
 form.search-bar {
@@ -167,6 +167,7 @@ form.search-bar button {
 }
 
 form.search-bar .search-icon {
+  display: block;
   background: rgb(var(--dark-gray));
   width: 1rem;
   height: 1rem;
@@ -349,7 +350,7 @@ header h1::after {
   gap: 0.25rem;
 }
 .email__priority input[type=checkbox].star__checkbox:checked + span {
-  background: var(--gold);
+  background: var(--blue);
 }
 .email__priority input[type=checkbox].star__checkbox + span {
   background: rgb(var(--dark-gray));
@@ -465,6 +466,8 @@ time {
 }
 
 .email__priority .star {
+  display: block;
+  background: rgb(var(--dark-gray));
   width: 1rem;
   height: 1rem;
   pointer-events: none;
@@ -497,6 +500,7 @@ time {
     grid-column: 1;
   }
   header#main-header {
+    gap: 1rem;
     grid-column: 2/span 2;
     grid-row: 1;
   }
@@ -551,8 +555,23 @@ nav#primary-nav .nav__container {
 }
 
 /*--Mobile Navigation | Slider--*/
+header#main-header .menu-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/menu-24px.svg) no-repeat center;
+  mask: url(/assets/svg/menu-24px.svg) no-repeat center;
+  padding: 4px;
+  margin: auto;
+}
+
 #menu-btn {
+  width: 48px;
   height: 100%;
+  background-color: transparent;
+  border: transparent;
 }
 
 #close-btn {
