--- a/style.scss
+++ b/style.scss
@@ -105,9 +105,9 @@ header#main-header {
   grid-row: span 1 / 1;
   grid-column: 2;
   display: flex;
-  gap: 1rem;
   & > * ~ * {
     border-radius: 0.5rem;
+    margin: auto;
   }
 }
 
@@ -137,12 +137,7 @@ form.search-bar button {
 }
 
 form.search-bar .search-icon {
-  background: rgb(var(--dark-gray));
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  -webkit-mask: $search-icon no-repeat center;
-  mask: $search-icon no-repeat center;
+  @include icon($search-icon)
 }
 
 @media screen and (min-width: 768px) {
@@ -309,7 +304,7 @@ header h1::after {
 .email__priority {
   gap: 0.25rem;
   & input[type="checkbox"].star__checkbox:checked + span {
-    background: var(--gold);
+    background: var(--blue);
   }
   & input[type="checkbox"].star__checkbox + span {
     background: rgb(var(--dark-gray));
@@ -418,11 +413,7 @@ time {
 }
 
 .email__priority .star {
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  -webkit-mask: $star-icon no-repeat center;
-  mask: $star-icon no-repeat center;
+  @include icon($star-icon)
 }
 
 @media screen and (min-width: 768px) {
@@ -450,6 +441,7 @@ time {
     grid-column: 1;
   }
   header#main-header {
+    gap: 1rem;
     grid-column: 2 / span 2;
     grid-row: 1;
   }
@@ -463,7 +455,6 @@ time {
     grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
-
 
 nav#primary-nav, header#main-header {
   height: 48px;
@@ -507,8 +498,17 @@ nav#primary-nav .nav__container {
 
 /*--Mobile Navigation | Slider--*/
 
+header#main-header .menu-icon {
+  @include icon($menu-icon);
+  padding: 4px;
+  margin: auto;
+}
+
 #menu-btn {
+  width: 48px;
   height: 100%;
+  background-color: transparent;
+  border: transparent;
 }
 
 #close-btn {
