--- a/style.scss
+++ b/style.scss
@@ -2,26 +2,6 @@
 @import 'globals';
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-@mixin text-truncate {
-  display:inline-block;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 1.2;
-}
-
-@mixin list-item {
-  display: flex;
-  flex-flow: row nowrap;
-  border-radius: 0.5rem;
-  height: 100%;
-  & * {
-    border-radius: 0.5rem;
-    display: flex;
-    align-items: flex-start;
-  }
-}
-
 body {
   display: grid;
   height: 100vh;
@@ -474,6 +454,7 @@ nav#primary-nav ul.nav__links {
 }
 
 nav#primary-nav .nav__link {
+  @include list-item;
   flex-grow: 1;
   height: 48px;
   border-radius: 0;
