--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
   color: var(--text-color);
 }
 
+/* ---- Breakpoints ---- */
+/* ---- Mobile / Desktop Hidden ---- */
 .mobile-hidden {
   visibility: hidden;
   display: none;
@@ -39,43 +41,102 @@ body {
     display: block;
     visibility: visible;
   }
-}
-@media screen and (min-width: 768px) {
   .desktop-hidden {
     visibility: hidden;
     display: none;
   }
 }
-/* Typography */
+/* ---- Icon SVGs ---- */
+/* ---- Usecase specific styling ---- */
 body {
   display: grid;
   height: 100vh;
-  grid-template: auto 1fr/0 1fr;
 }
 
+/* -----------
+  GRID
+/----------- */
+/*- min-width: 375px -*/
+@media screen and (min-width: 375px) {
+  body {
+    grid-template: auto 1fr/0 1fr;
+  }
+  main {
+    grid-column: 2/span 2;
+    grid-row: span 1;
+  }
+  nav#primary-nav {
+    grid-row: span 2/2;
+  }
+  header#main-header {
+    grid-row: span 1/1;
+    grid-column: 2;
+  }
+  aside {
+    grid-row: 3/span 2;
+    grid-column: 2;
+  }
+  footer {
+    grid-column: 2;
+    grid-row: 2;
+  }
+}
+/*- min-width: 768px -*/
+@media screen and (min-width: 768px) {
+  body {
+    grid-template: min-content max-content/min-content auto 43.75vw;
+  }
+  main {
+    grid-row: 2/span 2;
+    grid-column: 2/span 2;
+  }
+  nav#primary-nav {
+    grid-row: 1/span 2;
+    grid-column: 1;
+  }
+  header#main-header {
+    grid-column: 2/span 2;
+    grid-row: 1;
+  }
+  aside {
+    grid-row: 1/span 3;
+    grid-column: 3;
+  }
+  footer {
+    grid-column: 1/span 1;
+    grid-row: 3/span 1;
+  }
+  section > :first-child {
+    padding: 1rem 0 0.5rem 0;
+  }
+}
 header, main {
   max-width: 1024px;
 }
 
-section > :first-child {
-  padding: 1rem 2.4rem 0.5rem 0;
-}
-
-section#all-emails {
+/* -----------
+  TYPOGRAPHY
+/----------- */
+h1,
+h2,
+h3,
+p {
   flex-grow: 1;
 }
 
-aside {
-  grid-row: 3/span 2;
-  grid-column: 2;
-  width: 100%;
-  visibility: hidden;
+h1 {
+  font-size: 1rem;
+  white-space: nowrap;
+  color: rgb(var(--dark-gray));
 }
 
-footer {
-  align-self: end;
-  grid-column: 2;
-  grid-row: 2;
+h2 {
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+p {
+  font-size: 0.875rem;
 }
 
 a {
@@ -90,36 +151,66 @@ ul {
   overflow: hidden;
 }
 
-h1,
-h2,
-h3 {
-  flex-grow: 1;
-}
-
-h1 {
-  font-size: 1.5rem;
-  white-space: nowrap;
-}
-
-p {
-  flex-grow: 1;
-  font-size: 0.875rem;
-}
-
-h2 {
+time {
   font-size: 0.75rem;
-  font-weight: 500;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.email__unread {
+  font-weight: 700;
+  color: rgb(var(--dark-gray));
+}
+
+.email__actions .email__initials {
+  font-size: 0.75rem;
+}
+
+.email__details h3 {
+  display: inline-block;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 1.2;
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.email__details p, .email__details p > span {
+  display: inline-block;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 1.2;
+  max-width: 900px;
+  line-height: 1.2;
+}
+
+/* -----------
+  LAYOUT
+  TODO: Organize this area
+/----------- */
+.card {
+  display: flex;
+  flex-flow: row nowrap;
+  border-radius: 0.5rem;
+  height: 100%;
+  gap: 0.5rem;
+  height: 48px;
+  margin: 0.5rem 0;
+}
+.card * {
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: flex-start;
 }
 
 main {
-  grid-column: 2/span 2;
-  grid-row: span 1;
   display: flex;
   flex-direction: column;
 }
 
 nav#primary-nav {
-  grid-row: span 2/2;
   position: sticky;
   z-index: 2;
   max-width: 300px;
@@ -127,19 +218,62 @@ nav#primary-nav {
 }
 
 header#main-header {
-  grid-row: span 1/1;
-  grid-column: 2;
   display: flex;
 }
 header#main-header > * ~ * {
   border-radius: 0.5rem;
   margin: auto;
 }
+header#main-header h1::after {
+  content: "1";
+  display: inline-flex;
+  background-color: var(--light-gray);
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 99px;
+  margin-left: 0.25rem;
+  font-size: 0.75rem;
+}
 
+aside {
+  width: 100%;
+  visibility: hidden;
+}
+
+footer {
+  align-self: end;
+}
+
+@media screen and (min-width: 375px) {
+  section > :first-child {
+    padding: 1rem 1rem 0.5rem 1rem;
+  }
+}
+/*-- Add .list-resize transition to <main> onClick --*/
+header#main-header, main {
+  transition: grid-column 0.5s;
+  transition-behavior: allow-discrete;
+}
+
+.list-resize {
+  grid-column: 2/span 1 !important;
+}
+
+.show {
+  visibility: visible;
+}
+
+/* -----------
+  SEARCH BAR
+/----------- */
 form.search-bar {
   margin: 0 0.5rem 0 0;
   align-self: self-end;
-  height: 1.5rem;
+  height: 1rem;
   padding: 0.25rem;
 }
 
@@ -196,38 +330,24 @@ form.search-bar .search-icon {
     width: 100%;
   }
 }
-header h1::after {
-  content: "2";
-  display: inline-flex;
-  background-color: var(--light-gray);
-  font-weight: 700;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 99px;
-  font-size: 0.875rem;
-  margin-left: 0.25rem;
-}
-
-.card {
-  display: flex;
-  flex-flow: row nowrap;
-  border-radius: 0.5rem;
+/* -----------
+  EMAIL
+/----------- */
+.email {
+  flex-grow: 1;
+  position: relative;
+  letter-spacing: -0.4px;
+  padding: 0 0.5rem;
+  max-height: 64px;
   height: 100%;
-  gap: 0.5rem;
 }
-.card * {
-  border-radius: 0.5rem;
-  display: flex;
-  align-items: flex-start;
+.email:hover > .card {
+  transition: background-color 300ms ease-out;
+  background-color: var(--light-gray);
 }
 
-.home__pinned {
-  margin: 0 0.5rem;
-}
-
+/* EMAIL | List ------
+*/
 .home__pinned .email {
   border-radius: 0.5rem;
 }
@@ -236,27 +356,10 @@ header h1::after {
   border: 1px solid var(--border);
 }
 
-.home__list .email, .home__pinned .email {
-  transition: background-color 300ms ease-out;
-}
-.home__list .email:hover > .card, .home__pinned .email:hover > .card {
-  background-color: var(--light-gray);
-}
-
 .home__list {
   display: flex;
   flex-flow: column nowrap;
   justify-content: left;
-  height: 100%;
-}
-
-.home__list .email {
-  flex-grow: 1;
-  position: relative;
-  letter-spacing: -0.4px;
-  background-color: transparent;
-  padding: 0 0.5rem;
-  max-height: 64px;
   height: 100%;
 }
 
@@ -268,22 +371,8 @@ header h1::after {
   border-bottom: 1px solid var(--border);
 }
 
-.home__list .email .card,
-.home__pinned .email .card {
-  height: 48px;
-  margin: 0.5rem 0;
-}
-
-.email__unread {
-  font-weight: 700;
-  color: rgb(var(--dark-gray));
-}
-
-.home__list .email .card.email__unread time.email__datetime {
-  background-color: var(--light-gray);
-  border: 1px solid var(--border);
-}
-
+/* EMAIL | Structure ------
+*/
 .email__details,
 .email__priority,
 .email__actions {
@@ -315,6 +404,8 @@ header h1::after {
   max-width: 100%;
 }
 
+/* EMAIL | Actions ------
+*/
 .email__actions {
   align-items: center;
   justify-content: center;
@@ -343,12 +434,10 @@ header h1::after {
 
 .email__actions .email__initials {
   position: absolute;
-  font-size: 0.75rem;
 }
 
-.email__priority {
-  gap: 0.25rem;
-}
+/* EMAIL | Priority ------
+*/
 .email__priority input[type=checkbox].star__checkbox:checked + span {
   background: var(--blue);
 }
@@ -359,108 +448,41 @@ header h1::after {
   opacity: 0;
 }
 
-.email__details {
-  display: grid;
-  grid-template: 0 1fr 1fr/1fr min-content;
-  grid-auto-flow: column;
-  width: 100%;
-  padding: 0.5rem 0;
-}
-.email__details > * {
-  border-radius: 0;
-}
+/* EMAIL | Email Priority ------
 
-.email__details a::after, .email__details form::after {
-  content: " ";
-  position: absolute;
-  cursor: pointer;
-  margin: 0;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-#view-email {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  opacity: 0;
-  color: transparent;
-}
-
-/*-- Add class to <main> On click --*/
-header#main-header, main {
-  transition: grid-column 0.5s;
-  transition-behavior: allow-discrete;
-}
-
-.list-resize {
-  grid-column: 2/span 1 !important;
-}
-
-.show {
-  visibility: visible;
-}
-
-/*-- Add class to <main> On click --*/
-.email__details h3 {
-  display: inline-block;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 1.2;
-  font-size: 0.875rem;
-  font-weight: 600;
-}
-
-.email__details p, .email__details p > span {
-  display: inline-block;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 1.2;
-  max-width: 900px;
-  line-height: 1.2;
-}
-
-.email__details p > span {
-  display: inline-flex;
-}
-
-.email__details p > span::after {
-  content: " – ";
-}
-
-.email__details p, .email__details h3 {
-  margin: auto 0;
-}
-
+  Date and time recieved
+*/
 time {
-  font-size: 0.75rem;
   width: -moz-max-content;
   width: max-content;
 }
 
-.email__priority time.email__datetime {
-  background-color: transparent;
-  border: 1px solid transparent;
+time.email__datetime {
   padding: 0 0.25rem;
   height: 1.125rem;
-  line-height: 1.5;
-  text-align: center;
   border-radius: 0.625rem;
 }
 
-.email__priority time.email__datetime::before {
+time.email__datetime::before {
   content: "sent ";
   opacity: 0;
   width: 0;
 }
 
+.home__pinned time.email__datetime {
+  background-color: var(--light-gray);
+  border: 1px solid var(--light-gray);
+}
+
+.home__list time.email__datetime {
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+/* EMAIL | Email Priority ------
+
+  Star input
+*/
 .email__star-container {
   margin-right: 0.5rem;
 }
@@ -475,45 +497,81 @@ time {
   mask: url(/assets/svg/star-outline.svg) no-repeat center;
 }
 
+/* EMAIL | Details ------
+*/
+.email__details {
+  display: grid;
+  width: 100%;
+  padding: 0.5rem 0;
+}
+.email__details > * {
+  border-radius: 0;
+}
+.email__details #view-email {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  opacity: 0;
+  color: transparent;
+}
+
+.email__details a::after, .email__details form::after {
+  content: " ";
+  position: absolute;
+  cursor: pointer;
+  margin: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.email__details p > span {
+  display: inline-flex;
+}
+
+.email__details p > span::after {
+  content: " – ";
+}
+
+.email__details p, .email__details h3 {
+  margin: auto 0;
+}
+
+@media screen and (min-width: 375px) {
+  .email__details {
+    grid-auto-flow: column;
+    grid-template: 0 1fr 1fr/1fr min-content;
+  }
+}
 @media screen and (min-width: 768px) {
-  body {
-    grid-template: min-content max-content/min-content auto 43.75vw;
+  .email__details {
+    grid-auto-flow: row;
+    grid-template: 1fr/0 25% minmax(auto, 948px) min-content;
   }
-  main {
-    grid-row: 2/span 2;
-    grid-column: 2/span 2;
-  }
+}
+/* -----------
+  MISC
+/----------- */
+@media screen and (min-width: 768px) {
   aside {
-    grid-row: 1/span 3;
-    grid-column: 3;
     z-index: 1;
     width: 100%;
-  }
-  footer {
-    grid-column: 1/span 1;
-    grid-row: 3/span 1;
   }
   nav#primary-nav {
     z-index: 1;
     width: 168px;
-    grid-row: 1/span 2;
-    grid-column: 1;
   }
   header#main-header {
     gap: 1rem;
-    grid-column: 2/span 2;
-    grid-row: 1;
-  }
-  .home__list p,
-  .home__pinned p {
-    font-size: 1rem;
-  }
-  .email__details {
-    grid-auto-flow: row;
-    grid-template-rows: 1fr;
-    grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
+/* -----------
+  NAVIGATION
+/----------- */
 nav#primary-nav, header#main-header {
   height: 48px;
   align-items: start;
@@ -563,8 +621,41 @@ nav#primary-nav .nav__container {
   background-color: var(--offwhite);
 }
 
-/*--Mobile Navigation | Slider--*/
-header#main-header .menu-icon {
+@media screen and (min-width: 768px) {
+  nav#primary-nav, header#main-header {
+    align-items: end;
+  }
+  header#main-header {
+    margin: 1rem 0;
+  }
+  nav#primary-nav {
+    position: relative;
+    transform: translateX(0);
+  }
+  nav#primary-nav button {
+    margin: 1rem 0 1rem 2rem;
+  }
+  nav#primary-nav ul.nav__links {
+    position: relative;
+    z-index: auto;
+    width: auto;
+    margin-left: 2rem;
+  }
+  nav#primary-nav .nav__container {
+    display: none;
+    visibility: hidden;
+  }
+  nav#primary-nav .nav__link {
+    flex-grow: 1;
+    border: none;
+  }
+  nav#primary-nav .nav__link > a {
+    margin: auto auto auto 0;
+  }
+}
+/* NAVIGATION | Slider Interaction ------
+*/
+.menu-icon {
   display: block;
   background: rgb(var(--dark-gray));
   width: 1rem;
@@ -611,6 +702,10 @@ header#main-header .menu-icon {
   pointer-events: none;
 }
 
+/* NAVIGATION | Slider Interaction ------
+
+  Animations
+*/
 nav#primary-nav.slider {
   transform: translateX(-100vw);
   -webkit-transform: translateX(-100vw);
@@ -669,41 +764,9 @@ nav#primary-nav.slide-in {
     opacity: 0;
   }
 }
-/*-- 
-Desktop Navigation 
---*/
-@media screen and (min-width: 768px) {
-  nav#primary-nav, header#main-header {
-    align-items: end;
-  }
-  header#main-header {
-    margin: 1rem 0;
-  }
-  nav#primary-nav {
-    position: relative;
-    transform: translateX(0);
-  }
-  nav#primary-nav button {
-    margin: 1rem 0 1rem 2rem;
-  }
-  nav#primary-nav ul.nav__links {
-    position: relative;
-    z-index: auto;
-    width: auto;
-    margin-left: 2rem;
-  }
-  nav#primary-nav .nav__container {
-    display: none;
-    visibility: hidden;
-  }
-  nav#primary-nav .nav__link {
-    flex-grow: 1;
-    border: none;
-  }
-  nav#primary-nav .nav__link > a {
-    margin: auto auto auto 0;
-  }
-}
+/* -----------
+  EMAIL CONTENT VIEW
+/----------- */
 .email__content {
   position: fixed;
   bottom: 0;
