--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @import url("reset.css");
 @import 'globals';
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
@@ -5,32 +6,98 @@
 body {
   display: grid;
   height: 100vh;
-  grid-template: auto 1fr / 0 1fr;
+}
+
+/* -----------
+  GRID
+/----------- */ 
+
+/*- min-width: 375px -*/
+
+@include responsize("mobile") {
+  body {
+    grid-template: auto 1fr / 0 1fr;
+  }
+  main {
+    grid-column: 2 / span 2;
+    grid-row: span 1;
+  }
+  nav#primary-nav{
+    grid-row: span 2 / 2;
+  }
+  header#main-header {
+    grid-row: span 1 / 1;
+    grid-column: 2;
+  }
+  aside {
+    grid-row: 3 / span 2;
+    grid-column: 2;
+  }
+  footer {
+    grid-column: 2;
+    grid-row: 2;
+  }
+}
+
+/*- min-width: 768px -*/
+
+@include responsize("tablet") {
+  body {
+    grid-template: min-content max-content / min-content auto calc(100vw * 56 / 128.0);
+  }
+  main {
+    grid-row: 2 / span 2;
+    grid-column: 2 / span 2;
+  }
+  nav#primary-nav {
+    grid-row: 1 / span 2;
+    grid-column: 1;
+  }
+  header#main-header {
+    grid-column: 2 / span 2;
+    grid-row: 1;
+  }
+  aside {
+    grid-row: 1 / span 3;
+    grid-column: 3;
+  }
+  footer {
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+  }
+  section > :first-child {
+    padding: 1rem 0 0.5rem 0;
+  }
 }
 
 header, main {
-  max-width: 1024px;
+  max-width: map.get($breakpoints, "laptop");
 }
 
-section > :first-child {
-  padding: 1rem 2.4rem 0.5rem 0;
-}
+/* -----------
+  TYPOGRAPHY
+/----------- */ 
 
-section#all-emails {
+h1,
+h2,
+h3,
+p {
   flex-grow: 1;
 }
 
-aside {
-  grid-row: 3 / span 2;
-  grid-column: 2;
-  width: 100%;
-  visibility: hidden;
+h1 {
+  font-size: 1rem;
+  white-space: nowrap;
+  color: rgb(var(--dark-gray));
 }
 
-footer {
-  align-self: end;
-  grid-column: 2;
-  grid-row: 2;
+h2 {
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+p {
+  font-size: 0.875rem;
 }
 
 a {
@@ -45,36 +112,51 @@ ul {
   overflow: hidden;
 }
 
-h1,
-h2,
-h3 {
-  flex-grow: 1;
-}
-
-h1 {
-  font-size: $heading-lg;
-  white-space: nowrap;
-}
-
-p {
-  flex-grow: 1;
-  font-size: 0.875rem;
-}
-
-h2 {
+time {
   font-size: 0.75rem;
-  font-weight: 500;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.email__unread {
+  font-weight: 700;
+  color: rgb(var(--dark-gray));
+}
+
+.email__actions .email__initials {
+  font-size: 0.75rem;
+}
+
+.email__details h3 {
+  @include text-truncate;
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.email__details p, .email__details p > span {
+  @include text-truncate;
+  max-width: 900px;
+  line-height: 1.2;
+}
+
+/* -----------
+  LAYOUT
+  TODO: Organize this area
+/----------- */ 
+
+.card {
+  @include list-item;
+  gap: 0.5rem;
+  height: 48px;
+  margin: 0.5rem 0;
 }
 
 main {
-  grid-column: 2 / span 2;
-  grid-row: span 1;
   display: flex;
   flex-direction: column;
 }
 
 nav#primary-nav {
-  grid-row: span 2 / 2;
   position: sticky;
   z-index: 2;
   max-width: 300px;
@@ -82,19 +164,65 @@ nav#primary-nav {
 }
 
 header#main-header {
-  grid-row: span 1 / 1;
-  grid-column: 2;
   display: flex;
   & > * ~ * {
     border-radius: 0.5rem;
     margin: auto;
   }
+  & h1::after {
+    content: "1";
+    display: inline-flex;
+    background-color: var(--light-gray);
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 99px;
+    margin-left: 0.25rem;
+    font-size: 0.75rem;
+  }
 }
+
+aside {
+  width: 100%;
+  visibility: hidden;
+}
+
+footer {
+  align-self: end;
+}
+
+@include responsize("mobile") {
+  section > :first-child {
+    padding: 1rem 1rem 0.5rem 1rem;
+  }
+}
+
+/*-- Add .list-resize transition to <main> onClick --*/ 
+
+header#main-header, main {
+  transition: grid-column 0.5s;
+  transition-behavior: allow-discrete;
+}
+
+.list-resize {
+  grid-column: 2 / span 1!important;
+}
+
+.show {
+  visibility: visible;
+}
+
+/* -----------
+  SEARCH BAR
+/----------- */ 
 
 form.search-bar {
   margin: 0 0.5rem 0 0;
   align-self: self-end;
-  height: $heading-lg;
+  height: 1rem;
   padding: 0.25rem;
 }
 
@@ -120,46 +248,42 @@ form.search-bar .search-icon {
   @include icon($search-icon)
 }
 
-@media screen and (min-width: 768px) {
+@include responsize("tablet") {
   form.search-bar {
     display: flex;
     margin: 0 0.5rem 0 0.5rem;
     flex-flow: row nowrap;
     align-items: center;
     max-width: 300px;
-  width: 100%;
-  flex-grow: 1;
-    &:hover{background-color: var(--light-gray);}
-    &:focus, :focus-visible, :focus-within{background-color: var(--light-gray);}
+    width: 100%;
+    flex-grow: 1;
+      &:hover{background-color: var(--light-gray);}
+      &:focus, :focus-visible, :focus-within{background-color: var(--light-gray);}
   }
   form.search-bar input[type="text"] {
     width: 100%;
   }
 }
 
-header h1::after {
-  content: "2";
-  display: inline-flex;
-  background-color: var(--light-gray);
-  font-weight: 700;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 99px;
-  font-size: 0.875rem;
-  margin-left: 0.25rem;
+/* -----------
+  EMAIL
+/----------- */ 
+
+.email {
+  flex-grow: 1;
+  position: relative;
+  letter-spacing: -0.4px;
+  padding: 0 0.5rem;
+  max-height: 64px;
+  height: 100%;
+  &:hover > .card {
+    transition: background-color 300ms ease-out;
+    background-color: var(--light-gray);
+  }
 }
 
-.card {
-  @include list-item;
-  gap: 0.5rem;
-}
-
-.home__pinned {
-  margin: 0 0.5rem;
-}
+/* EMAIL | List ------
+*/ 
 
 .home__pinned .email {
   border-radius: 0.5rem;
@@ -169,27 +293,10 @@ header h1::after {
   border: 1px solid var(--border);
 }
 
-.home__list .email, .home__pinned .email {
-  transition: background-color 300ms ease-out;
-  &:hover > .card {
-    background-color: var(--light-gray);
-  }
-}
-
 .home__list {
   display: flex;
   flex-flow: column nowrap;
   justify-content: left;
-  height: 100%;
-}
-
-.home__list .email {
-  flex-grow: 1;
-  position: relative;
-  letter-spacing: -0.4px;
-  background-color: transparent;
-  padding: 0 0.5rem;
-  max-height: 64px;
   height: 100%;
 }
 
@@ -201,22 +308,9 @@ header h1::after {
   border-bottom: 1px solid var(--border);
 }
 
-.home__list .email .card,
-.home__pinned .email .card {
-  // height: 64px;
-  height: 48px;
-  margin: 0.5rem 0;
-}
+/* EMAIL | Structure ------
+*/ 
 
-.email__unread {
-  font-weight: 700;
-  color: rgb(var(--dark-gray));
-}
-
-.home__list .email .card.email__unread time.email__datetime {
-  background-color: var(--light-gray);
-  border: 1px solid var(--border);
-}
 
 .email__details,
 .email__priority,
@@ -249,6 +343,9 @@ header h1::after {
   }
 }
 
+/* EMAIL | Actions ------
+*/ 
+
 .email__actions {
   align-items: center;
   justify-content: center;
@@ -278,11 +375,12 @@ header h1::after {
 
 .email__actions .email__initials {
   position: absolute;
-  font-size: 0.75rem;
 }
 
+/* EMAIL | Priority ------
+*/ 
+
 .email__priority {
-  gap: 0.25rem;
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--blue);
   }
@@ -294,65 +392,82 @@ header h1::after {
   }
 }
 
+/* EMAIL | Email Priority ------
+
+  Date and time recieved
+*/ 
+
+time {
+  width: max-content;
+}
+
+time.email__datetime {
+  padding: 0 0.25rem;
+  height: 1.125rem;
+  border-radius: 0.625rem;
+}
+
+
+time.email__datetime::before {
+  content: "sent\00a0";
+  opacity: 0;
+  width: 0;
+}
+
+.home__pinned time.email__datetime {
+  background-color: var(--light-gray);
+  border: 1px solid var(--light-gray);
+}
+
+.home__list time.email__datetime {
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+/* EMAIL | Email Priority ------
+
+  Star input
+*/ 
+
+.email__star-container {
+  margin-right: 0.5rem;
+}
+
+.email__priority .star {
+  @include icon($star-icon)
+}
+
+/* EMAIL | Details ------
+*/ 
+
 .email__details {
   display: grid;
-  grid-template: 0 1fr 1fr / 1fr min-content;
-  grid-auto-flow: column;
   width: 100%;
   padding: 0.5rem 0;
   & > * {
     border-radius: 0;
   }
-}
-
-.email__details a::after, .email__details form::after {
-    content: " ";
+  & #view-email {
     position: absolute;
-    cursor: pointer;
-    margin: 0;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 1;
+    opacity: 0;
+    color: transparent;
+  }
 }
 
-#view-email {
+.email__details a::after, .email__details form::after {
+  content: " ";
   position: absolute;
+  cursor: pointer;
+  margin: 0;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
-  opacity: 0;
-  color: transparent;
-}
-
-/*-- Add class to <main> On click --*/ 
-header#main-header, main {
-  transition: grid-column 0.5s;
-  transition-behavior: allow-discrete;
-}
-
-.list-resize {
-  grid-column: 2 / span 1!important;
-}
-
-.show {
-  visibility: visible;
-}
-
-/*-- Add class to <main> On click --*/ 
-
-.email__details h3 {
-  @include text-truncate;
-  font-size: 0.875rem;
-  font-weight: 600;
-}
-
-.email__details p, .email__details p > span {
-  @include text-truncate;
-  max-width: 900px;
-  line-height: 1.2;
 }
 
 .email__details p > span {
@@ -367,74 +482,41 @@ header#main-header, main {
   margin: auto 0;
 } 
 
-time {
-  font-size: 0.75rem;
-  width: max-content;
+@include responsize("mobile") {
+  .email__details {
+    grid-auto-flow: column;
+    grid-template: 0 1fr 1fr / 1fr min-content;
+  }
 }
 
-.email__priority time.email__datetime {
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0 0.25rem;
-  height: 1.125rem;
-  line-height: 1.5;
-  text-align: center;
-  border-radius: 0.625rem;
+@include responsize("tablet") {
+  .email__details {
+    grid-auto-flow: row;
+    grid-template: 1fr / 0 25% minmax(auto, 948px) min-content;
+  }
 }
 
-.email__priority time.email__datetime::before {
-  content: "sent\00a0";
-  opacity: 0;
-  width: 0;
-}
-
-.email__star-container {
-  margin-right: 0.5rem;
-}
-
-.email__priority .star {
-  @include icon($star-icon)
-}
+/* -----------
+  MISC
+/----------- */ 
 
 @media screen and (min-width: 768px) {
-  body {
-    grid-template: min-content max-content / min-content auto calc(100vw * 56 / 128.0);
-  }
-  main {
-    grid-row: 2 / span 2;
-    grid-column: 2 / span 2;
-  }
   aside {
-    grid-row: 1 / span 3;
-    grid-column: 3;
     z-index: 1;
     width: 100%;
-  }
-  footer {
-    grid-column: 1 / span 1;
-    grid-row: 3 / span 1;
   }
   nav#primary-nav {
     z-index: 1;
     width: 168px;
-    grid-row: 1 / span 2;
-    grid-column: 1;
   }
   header#main-header {
     gap: 1rem;
-    grid-column: 2 / span 2;
-    grid-row: 1;
-  }
-  .home__list p,
-  .home__pinned p {
-    font-size: 1rem;
-  }
-  .email__details {
-    grid-auto-flow: row;
-    grid-template-rows: 1fr;
-    grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
+
+/* -----------
+  NAVIGATION
+/----------- */ 
 
 nav#primary-nav, header#main-header {
   height: 48px;
@@ -477,9 +559,43 @@ nav#primary-nav .nav__container {
   background-color: var(--offwhite);
 }
 
-/*--Mobile Navigation | Slider--*/
+@include responsize("tablet") {
+  nav#primary-nav, header#main-header {
+    align-items: end;
+  }
+  header#main-header {
+    margin: 1rem 0;
+  }
+  nav#primary-nav {
+    position: relative;
+    transform: translateX(0);
+  }
+  nav#primary-nav button {
+    margin: 1rem 0 1rem 2rem;
+  }
+  nav#primary-nav ul.nav__links {
+    position: relative;
+    z-index: auto;
+    width: auto;
+    margin-left: 2rem;
+  }
+  nav#primary-nav .nav__container {
+    display: none;
+    visibility: hidden;
+  }
+  nav#primary-nav .nav__link {
+    flex-grow: 1;
+    border: none;
+  }
+  nav#primary-nav .nav__link > a {
+    margin: auto auto auto 0;
+  }
+}
 
-header#main-header .menu-icon {
+/* NAVIGATION | Slider Interaction ------
+*/ 
+
+.menu-icon {
   @include icon($menu-icon);
   padding: 4px;
   margin: auto;
@@ -519,6 +635,11 @@ header#main-header .menu-icon {
   z-index: 1;
   pointer-events: none;
 }
+
+/* NAVIGATION | Slider Interaction ------
+
+  Animations
+*/ 
 
 nav#primary-nav.slider {
   transform: translateX(-100vw);
@@ -564,42 +685,9 @@ nav#primary-nav.slide-in {
   100% { visibility: hidden; opacity: 0; }
 }
 
-/*-- 
-Desktop Navigation 
---*/
-
-@media screen and (min-width: 768px) {
-  nav#primary-nav, header#main-header {
-    align-items: end;
-  }
-  header#main-header {
-    margin: 1rem 0;
-  }
-  nav#primary-nav {
-    position: relative;
-    transform: translateX(0);
-  }
-  nav#primary-nav button {
-    margin: 1rem 0 1rem 2rem;
-  }
-  nav#primary-nav ul.nav__links {
-    position: relative;
-    z-index: auto;
-    width: auto;
-    margin-left: 2rem;
-  }
-  nav#primary-nav .nav__container {
-    display: none;
-    visibility: hidden;
-  }
-  nav#primary-nav .nav__link {
-    flex-grow: 1;
-    border: none;
-  }
-  nav#primary-nav .nav__link > a {
-    margin: auto auto auto 0;
-  }
-}
+/* -----------
+  EMAIL CONTENT VIEW
+/----------- */ 
 
 .email__content {
   position: fixed;
