--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("reset.css");
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 :root {
   --offwhite: #e9ecf2;
   --gold: #ffa800;
@@ -13,27 +13,27 @@
   --border: var(--light-gray);
   --bg-card: var(--offwhite);
   --bg-checkbox: var(--light-gray);
-  --max-screen: 1024px;
-  --fonts: system-ui, -apple-system, sans-serif;
+  --jakarta: "Plus Jakarta Sans", system-ui, -apple-system, sans-serif;
+  --body: "Inter", system-ui, -apple-system, sans-serif;
   --text-color: rgba(var(--dark-gray), 0.8) ;
 }
 
 body {
-  font-family: var(--fonts);
   background-color: var(--global-bg);
   color: var(--text-color);
+  font-optical-sizing: auto;
 }
 
 /* ---- Breakpoints ---- */
 /* ---- Mobile / Desktop Hidden ---- */
 .mobile-hidden {
-  visibility: hidden;
   display: none;
+  visibility: hidden;
 }
 
 .desktop-hidden {
-  visibility: block;
-  display: visible;
+  display: block;
+  visibility: visible;
 }
 
 @media screen and (min-width: 768px) {
@@ -42,8 +42,8 @@ body {
     visibility: visible;
   }
   .desktop-hidden {
-    visibility: hidden;
     display: none;
+    visibility: hidden;
   }
 }
 /* ---- Icon SVGs ---- */
@@ -103,7 +103,7 @@ body {
     grid-column: 3;
   }
   footer {
-    grid-column: 1/span 1;
+    grid-column: 1/span 3;
     grid-row: 3/span 1;
   }
 }
@@ -116,28 +116,46 @@ header, main {
 /----------- */
 h1,
 h2,
-h3,
-p {
-  flex-grow: 1;
+h3 {
+  display: inline-flex;
+  font-family: var(--jakarta);
+  font-weight: 500;
+  color: rgba(var(--dark-gray));
 }
 
 h1 {
   font-size: 1rem;
-  white-space: nowrap;
-  color: rgb(var(--dark-gray));
+  white-space: wrap;
+  flex-grow: 1;
 }
 
 h2 {
+  align-items: baseline;
+  gap: 0.5rem;
+}
+
+h2 > #unread-count {
   font-size: 0.75rem;
+  max-height: 1.5rem;
+  align-items: baseline;
   font-weight: 600;
+  text-align: center;
+}
+
+h3 {
+  font-size: 0.75rem;
+  flex-grow: 1;
 }
 
 p {
   font-size: 0.875rem;
+  flex-grow: 1;
+  font-family: var(--body);
 }
 
 a {
   text-decoration: none;
+  font-family: var(--body);
 }
 
 a:visited {
@@ -148,11 +166,15 @@ ul {
   overflow: hidden;
 }
 
-time {
+time, .label, span {
   font-size: 0.75rem;
+  font-family: var(--body);
   font-weight: 600;
   line-height: 1.5;
-  text-align: center;
+}
+
+span {
+  font-family: var(--body);
 }
 
 .email__unread {
@@ -170,7 +192,7 @@ time {
   text-overflow: ellipsis;
   white-space: nowrap;
   line-height: 1.2;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   font-weight: 600;
 }
 
@@ -182,8 +204,21 @@ time {
   line-height: 1.2;
   max-width: 900px;
   line-height: 1.2;
+  border-radius: 0;
 }
 
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    width: 100%;
+    flex-flow: column-reverse wrap;
+  }
+  p {
+    font-size: 1rem;
+    flex-grow: 1;
+  }
+}
 /* -----------
   LAYOUT
   TODO: Organize this area
@@ -217,27 +252,29 @@ nav#primary-nav {
 
 header#main-header {
   display: flex;
+  height: 48px;
 }
 header#main-header > * ~ * {
   border-radius: 0.5rem;
   margin: auto;
 }
-header#main-header h1 {
-  display: inline-flex;
+
+h2 > #unread-count {
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: var(--light-gray);
+  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
+  border-radius: 1rem;
 }
-header#main-header h1::after {
+
+h2 > #unread-count::before {
   content: "1";
   display: inline-flex;
-  background-color: var(--blue);
-  color: var(--offwhite);
   font-weight: 700;
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 99px;
-  margin-left: 0.25rem;
+  margin: 0 0.25rem;
   font-size: 0.75rem;
 }
 
@@ -248,15 +285,16 @@ aside {
 
 footer {
   align-self: end;
+  padding: 1rem;
 }
 
-section > :first-child {
-  padding: 1rem 1rem 0.5rem 1rem;
+h2, section > :first-child {
+  margin: 1rem 1rem 0.5rem 1rem;
 }
 
 @media screen and (min-width: 768px) {
-  section > :first-child {
-    padding: 1rem 0 0.5rem 0;
+  h2, section > :first-child {
+    margin: 1rem 0 0.5rem 0;
   }
 }
 /*-- Add .list-resize transition to <main> onClick --*/
@@ -306,16 +344,6 @@ form.search-bar button {
   background: transparent;
 }
 
-form.search-bar .search-icon {
-  display: block;
-  background: rgb(var(--dark-gray));
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  -webkit-mask: url(/assets/svg/search-icon.svg) no-repeat center;
-  mask: url(/assets/svg/search-icon.svg) no-repeat center;
-}
-
 @media screen and (min-width: 768px) {
   form.search-bar {
     display: flex;
@@ -342,7 +370,6 @@ form.search-bar .search-icon {
 .email {
   flex-grow: 1;
   position: relative;
-  letter-spacing: -0.4px;
   padding: 0 0.5rem;
   max-height: 64px;
   height: 100%;
@@ -458,12 +485,9 @@ form.search-bar .search-icon {
 
   Date and time recieved
 */
-time {
+time.email__datetime {
   width: -moz-max-content;
   width: max-content;
-}
-
-time.email__datetime {
   padding: 0 0.25rem;
   height: 1.125rem;
   border-radius: 0.625rem;
@@ -491,16 +515,6 @@ time.email__datetime::before {
 */
 .email__star-container {
   margin-right: 0.5rem;
-}
-
-.email__priority .star {
-  display: block;
-  background: rgb(var(--dark-gray));
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
-  mask: url(/assets/svg/star-outline.svg) no-repeat center;
 }
 
 /* EMAIL | Details ------
@@ -536,22 +550,21 @@ time.email__datetime::before {
   right: 0;
 }
 
-.email__details p > span {
-  display: inline-flex;
-}
-
-.email__details p > span::after {
-  content: " – ";
-}
-
 .email__details p, .email__details h3 {
   margin: auto 0;
+}
+
+.email__details p {
+  letter-spacing: -0.3px;
 }
 
 @media screen and (min-width: 375px) {
   .email__details {
     grid-auto-flow: column;
     grid-template: 0 1fr 1fr/1fr min-content;
+  }
+  .email__details h3 {
+    padding-bottom: 0.15rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -570,7 +583,7 @@ time.email__datetime::before {
   }
   nav#primary-nav {
     z-index: 1;
-    width: 268px;
+    width: 232px;
   }
   header#main-header {
     gap: 1rem;
@@ -579,11 +592,11 @@ time.email__datetime::before {
 /* -----------
   NAVIGATION
 /----------- */
-nav#primary-nav, header#main-header {
+nav#primary-nav {
   height: 48px;
   align-items: start;
 }
-nav#primary-nav > *:not(#close-btn, #search, .nav__links), header#main-header > *:not(#close-btn, #search, .nav__links) {
+nav#primary-nav > *:not(#close-btn, #search, .nav__links) {
   align-items: center;
   margin: auto;
 }
@@ -634,25 +647,17 @@ nav#primary-nav .nav__container {
 @media screen and (min-width: 768px) {
   nav#primary-nav, header#main-header {
     align-items: end;
-  }
-  header#main-header {
     margin: 1rem 0;
   }
   nav#primary-nav {
     position: relative;
     transform: translateX(0);
   }
-  nav#primary-nav button {
-    margin: 1rem 0 1rem 2rem;
-  }
   nav#primary-nav ul.nav__links {
     position: fixed;
     z-index: auto;
     width: auto;
-    margin: 1rem 0 1rem 2rem;
-    padding: 0 1rem;
-    border: 1px solid var(--border);
-    border-radius: 0.5rem;
+    margin: 1rem 0 1rem 1rem;
   }
   nav#primary-nav .nav__container {
     display: none;
@@ -669,13 +674,6 @@ nav#primary-nav .nav__container {
 /* NAVIGATION | Slider Interaction ------
 */
 .menu-icon {
-  display: block;
-  background: rgb(var(--dark-gray));
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  -webkit-mask: url(/assets/svg/menu-24px.svg) no-repeat center;
-  mask: url(/assets/svg/menu-24px.svg) no-repeat center;
   padding: 4px;
   margin: auto;
 }
@@ -789,6 +787,32 @@ nav#primary-nav.slide-in {
   border: 1px solid var(--border);
   background-color: var(--offwhite);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#email__subject {
+  display: flex;
+  flex-flow: row nowrap;
+  border-radius: 0.5rem;
+  height: 100%;
+  height: 100%;
+}
+#email__subject * {
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: flex-start;
+}
+
+div#email__sender {
+  display: grid;
+  grid-template: auto 1fr/32px auto;
+  grid-auto-flow: row;
+  gap: 0.5rem;
+}
+div#email__sender #sender__actions {
+  grid-column: 2/span 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -796,5 +820,108 @@ nav#primary-nav.slide-in {
     border-left: 1px solid var(--border);
     width: 43.75vw;
     overflow: hidden;
+    padding: 0 1rem;
   }
+}
+#sender-icon {
+  display: inline-flex;
+}
+
+#sender__actions > div {
+  width: -moz-fit-content;
+  width: fit-content;
+  border: 1px solid var(--border);
+  border-radius: 0.5rem;
+}
+
+.actions {
+  display: grid;
+  grid-template: 1fr/repeat(4, 68px);
+  gap: 1px;
+}
+.actions > * {
+  text-align: center;
+  font-size: 0.75rem;
+  padding-top: 0.25rem;
+}
+
+.star-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
+  mask: url(/assets/svg/star-outline.svg) no-repeat center;
+}
+
+.checkmark-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/checkmark-outline.svg) no-repeat center;
+  mask: url(/assets/svg/checkmark-outline.svg) no-repeat center;
+}
+
+.menu-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/menu-24px.svg) no-repeat center;
+  mask: url(/assets/svg/menu-24px.svg) no-repeat center;
+}
+
+.trash-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/trash-icon.svg) no-repeat center;
+  mask: url(/assets/svg/trash-icon.svg) no-repeat center;
+}
+
+.archive-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/all-inboxes-icon.svg) no-repeat center;
+  mask: url(/assets/svg/all-inboxes-icon.svg) no-repeat center;
+}
+
+.flame-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/flame-icon.svg) no-repeat center;
+  mask: url(/assets/svg/flame-icon.svg) no-repeat center;
+}
+
+.more-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/more-icon.svg) no-repeat center;
+  mask: url(/assets/svg/more-icon.svg) no-repeat center;
+}
+
+.icon-btn {
+  display: block;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+  padding: 0.25rem;
+  background-color: var(--light-gray);
+  border: 1px solid var(--border);
+  border-radius: 0.25rem;
 }/*# sourceMappingURL=style.css.map */
