--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,6 @@
 @use "sass:map";
 @import url("reset.css");
 @import 'globals';
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 body {
   display: grid;
@@ -62,7 +61,7 @@ body {
     grid-column: 3;
   }
   footer {
-    grid-column: 1 / span 1;
+    grid-column: 1 / span 3;
     grid-row: 3 / span 1;
   }
 }
@@ -77,28 +76,46 @@ header, main {
 
 h1,
 h2,
-h3,
-p {
-  flex-grow: 1;
+h3 {
+  display: inline-flex;
+  font-family: var(--jakarta);
+  font-weight: 500;
+  color: rgba(var(--dark-gray));
 }
 
 h1 {
   font-size: 1rem;
-  white-space: nowrap;
-  color: rgb(var(--dark-gray));
+  white-space: wrap;
+  flex-grow: 1;
 }
 
 h2 {
+  align-items: baseline;
+  gap: 0.5rem;
+}
+
+h2 > #unread-count {
   font-size: 0.75rem;
+  max-height: 1.5rem;
+  align-items: baseline;
   font-weight: 600;
+  text-align: center;
+}
+
+h3 {
+  font-size: 0.75rem;
+  flex-grow: 1;
 }
 
 p {
   font-size: 0.875rem;
+  flex-grow: 1;
+  font-family: var(--body);
 }
 
 a {
   text-decoration: none;
+  font-family: var(--body);
 }
 
 a:visited {
@@ -109,11 +126,15 @@ ul {
   overflow: hidden;
 }
 
-time {
+time, .label, span {
   font-size: 0.75rem;
+  font-family: var(--body);
   font-weight: 600;
   line-height: 1.5;
-  text-align: center;
+}
+
+span {
+  font-family: var(--body);
 }
 
 .email__unread {
@@ -127,7 +148,7 @@ time {
 
 .email__details h3 {
   @include text-truncate;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   font-weight: 600;
 }
 
@@ -135,6 +156,20 @@ time {
   @include text-truncate;
   max-width: 900px;
   line-height: 1.2;
+  border-radius: 0;
+}
+
+@include responsize("tablet") {
+  h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    width: 100%;
+    flex-flow: column-reverse wrap;
+  }
+  p {
+    font-size: 1rem;
+    flex-grow: 1;
+  }
 }
 
 /* -----------
@@ -163,28 +198,29 @@ nav#primary-nav {
 
 header#main-header {
   display: flex;
+  height: 48px;
   & > * ~ * {
     border-radius: 0.5rem;
     margin: auto;
   }
-  & h1 {
-    display: inline-flex;
-  }
-  & h1::after {
-    content: "1";
-    display: inline-flex;
-    background-color: var(--blue);
-    color: var(--offwhite);
-    font-weight: 700;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 20px;
-    height: 20px;
-    border-radius: 99px;
-    margin-left: 0.25rem;
-    font-size: 0.75rem;
-  }
+}
+
+h2 > #unread-count {
+  width: fit-content;
+  background-color: var(--light-gray);
+  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
+  border-radius: 1rem;
+}
+
+h2 > #unread-count::before {
+  content: "1";
+  display: inline-flex;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0 0.25rem;
+  font-size: 0.75rem;
 }
 
 aside {
@@ -194,15 +230,16 @@ aside {
 
 footer {
   align-self: end;
+  padding: 1rem;
 }
 
-section > :first-child {
-  padding: 1rem 1rem 0.5rem 1rem;
+h2, section > :first-child {
+  margin: 1rem 1rem 0.5rem 1rem;
 }
 
 @include responsize("tablet"){
-  section > :first-child {
-    padding: 1rem 0 0.5rem 0;
+  h2, section > :first-child {
+    margin: 1rem 0 0.5rem 0;
   }
 }
 
@@ -251,9 +288,9 @@ form.search-bar button {
   background: transparent;
 }
 
-form.search-bar .search-icon {
-  @include icon($search-icon)
-}
+// form.search-bar .search-icon {
+//   @include icon($search-icon)
+// }
 
 @include responsize("tablet") {
   form.search-bar {
@@ -279,7 +316,6 @@ form.search-bar .search-icon {
 .email {
   flex-grow: 1;
   position: relative;
-  letter-spacing: -0.4px;
   padding: 0 0.5rem;
   max-height: 64px;
   height: 100%;
@@ -404,11 +440,8 @@ form.search-bar .search-icon {
   Date and time recieved
 */ 
 
-time {
-  width: max-content;
-}
-
 time.email__datetime {
+  width: max-content;
   padding: 0 0.25rem;
   height: 1.125rem;
   border-radius: 0.625rem;
@@ -440,9 +473,9 @@ time.email__datetime::before {
   margin-right: 0.5rem;
 }
 
-.email__priority .star {
-  @include icon($star-icon)
-}
+// .email__priority .star {
+//   @include icon($star-icon)
+// }
 
 /* EMAIL | Details ------
 */ 
@@ -478,22 +511,21 @@ time.email__datetime::before {
   right: 0;
 }
 
-.email__details p > span {
-  display: inline-flex;
-}
-
-.email__details p > span::after {
-  content: "\00a0 –\00a0";
-}
-
 .email__details p, .email__details h3 {
   margin: auto 0;
 } 
+
+.email__details p {
+  letter-spacing: -0.3px;
+}
 
 @include responsize("mobile") {
   .email__details {
     grid-auto-flow: column;
     grid-template: 0 1fr 1fr / 1fr min-content;
+  }
+  .email__details h3 {
+    padding-bottom: 0.15rem;
   }
 }
 
@@ -515,7 +547,7 @@ time.email__datetime::before {
   }
   nav#primary-nav {
     z-index: 1;
-    width: 268px;
+    width: 232px;
   }
   header#main-header {
     gap: 1rem;
@@ -526,7 +558,7 @@ time.email__datetime::before {
   NAVIGATION
 /----------- */ 
 
-nav#primary-nav, header#main-header {
+nav#primary-nav {
   height: 48px;
   align-items: start;
   & > *:not(#close-btn, #search, .nav__links) {
@@ -573,25 +605,23 @@ nav#primary-nav .nav__container {
 @include responsize("tablet") {
   nav#primary-nav, header#main-header {
     align-items: end;
-  }
-  header#main-header {
     margin: 1rem 0;
   }
   nav#primary-nav {
     position: relative;
     transform: translateX(0);
   }
-  nav#primary-nav button {
-    margin: 1rem 0 1rem 2rem;
-  }
+  // nav#primary-nav button {
+  //   margin: 1rem 0 1rem 2rem;
+  // }
   nav#primary-nav ul.nav__links {
     position: fixed;
     z-index: auto;
     width: auto;
-    margin: 1rem 0 1rem 2rem;
-    padding: 0 1rem;
-    border: 1px solid var(--border);
-    border-radius: 0.5rem;
+    margin: 1rem 0 1rem 1rem;
+    // padding: 0 1rem;
+    // border: 1px solid var(--border);
+    // border-radius: 0.5rem;
     // flex-flow: row nowrap;
   }
   nav#primary-nav .nav__container {
@@ -611,7 +641,7 @@ nav#primary-nav .nav__container {
 */ 
 
 .menu-icon {
-  @include icon($menu-icon);
+  // @include icon($menu-icon);
   padding: 4px;
   margin: auto;
 }
@@ -713,6 +743,24 @@ nav#primary-nav.slide-in {
   border: 1px solid var(--border);
   background-color: var(--offwhite);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#email__subject {
+  @include list-item;
+  height: 100%;
+}
+
+div#email__sender {
+  display: grid;
+  grid-template: auto 1fr / 32px auto;
+  grid-auto-flow: row;
+  gap: 0.5rem;
+  & #sender__actions {
+    grid-column: 2 / span 1;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -720,5 +768,51 @@ nav#primary-nav.slide-in {
     border-left: 1px solid var(--border);
     width: calc(100vw * 56 / 128.0);
     overflow: hidden;
+    padding: 0 1rem;
   }
+}
+
+#sender-icon {
+  display: inline-flex;
+}
+
+#sender__actions > div {
+  width: fit-content;
+  border: 1px solid var(--border);
+    border-radius: 0.5rem;
+}
+
+.actions {
+  display: grid;
+  grid-template: 1fr / repeat(4, 68px);
+  gap: 1px;
+  // background-color: var(--light-gray);
+  & > * {
+    text-align: center;
+    font-size: 0.75rem;
+    padding-top: 0.25rem;
+    // background-color: var(--offwhite);
+  }
+}
+
+@each $name, $svg in $icons {
+  .#{$name}-icon {
+    display: block;
+    background: rgb(var(--dark-gray));
+    width: 1rem;
+    height: 1rem;
+    pointer-events: none;
+    -webkit-mask: $svg no-repeat center;
+    mask: $svg no-repeat center;
+  }
+}
+
+.icon-btn {
+  display: block;
+  width: fit-content;
+  margin: auto;
+  padding: 0.25rem;
+  background-color: var(--light-gray);
+  border: 1px solid var(--border);
+  border-radius: 0.25rem;
 }
