--- a/style.css
+++ b/style.css
@@ -48,6 +48,50 @@ body {
 }
 /* ---- Icon SVGs ---- */
 /* ---- Usecase specific styling ---- */
+/* ---- Animations ---- */
+@keyframes slideOut {
+  to {
+    transform: translateX(0);
+  }
+}
+@keyframes slideIn {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100vw);
+  }
+}
+.fade-in ~ #scrim {
+  animation: fadeIn 1s 1 forwards;
+  -webkit-animation: fadeIn 300ms 1 forwards;
+}
+
+.fade-out ~ #scrim {
+  animation: fadeOut 1s 1 forwards;
+  -webkit-animation: fadeOut 300ms 1 forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@keyframes fadeOut {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
 body {
   display: grid;
   height: 100vh;
@@ -118,20 +162,21 @@ h1,
 h2,
 h3 {
   display: inline-flex;
-  font-family: var(--jakarta);
   font-weight: 500;
   color: rgba(var(--dark-gray));
+  flex-grow: 1;
 }
 
 h1 {
   font-size: 1rem;
   white-space: wrap;
-  flex-grow: 1;
+  font-family: var(--jakarta);
 }
 
 h2 {
   align-items: baseline;
   gap: 0.5rem;
+  font-family: var(--body);
 }
 
 h2 > #unread-count {
@@ -144,7 +189,7 @@ h2 > #unread-count {
 
 h3 {
   font-size: 0.75rem;
-  flex-grow: 1;
+  font-family: var(--body);
 }
 
 p {
@@ -208,15 +253,17 @@ span {
 }
 
 @media screen and (min-width: 768px) {
-  h1 {
-    font-size: 1.5rem;
+  h1, h2 {
     font-weight: 700;
     width: 100%;
-    flex-flow: column-reverse wrap;
+    align-items: center;
   }
   p {
     font-size: 1rem;
     flex-grow: 1;
+  }
+  .email__details h3 {
+    font-size: 0.875rem;
   }
 }
 /* -----------
@@ -226,7 +273,9 @@ span {
 .card {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: center;
   border-radius: 0.5rem;
+  gap: 0.5rem;
   height: 100%;
   gap: 0.5rem;
   height: 48px;
@@ -260,10 +309,10 @@ header#main-header > * ~ * {
 }
 
 h2 > #unread-count {
-  width: -moz-fit-content;
-  width: fit-content;
+  width: -moz-max-content;
+  width: max-content;
   background-color: var(--light-gray);
-  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
+  padding: 0.15rem 0.5rem 0.15rem 0.15rem;
   border-radius: 1rem;
 }
 
@@ -295,6 +344,17 @@ h2, section > :first-child {
 @media screen and (min-width: 768px) {
   h2, section > :first-child {
     margin: 1rem 0 0.5rem 0;
+  }
+  #clock {
+    height: 18px;
+    animation: 1s ease-out 1s 1 fadeIn;
+    animation-play-state: running;
+  }
+  #greeting {
+    height: 48px;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-left: 1rem;
   }
 }
 /*-- Add .list-resize transition to <main> onClick --*/
@@ -563,9 +623,6 @@ time.email__datetime::before {
     grid-auto-flow: column;
     grid-template: 0 1fr 1fr/1fr min-content;
   }
-  .email__details h3 {
-    padding-bottom: 0.15rem;
-  }
 }
 @media screen and (min-width: 768px) {
   .email__details {
@@ -596,10 +653,6 @@ nav#primary-nav {
   height: 48px;
   align-items: start;
 }
-nav#primary-nav > *:not(#close-btn, #search, .nav__links) {
-  align-items: center;
-  margin: auto;
-}
 
 nav#primary-nav ul.nav__links {
   position: absolute;
@@ -615,7 +668,9 @@ nav#primary-nav ul.nav__links {
 nav#primary-nav .nav__link {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: center;
   border-radius: 0.5rem;
+  gap: 0.5rem;
   height: 100%;
   flex-grow: 1;
   height: 48px;
@@ -631,6 +686,7 @@ nav#primary-nav .nav__link * {
 
 nav#primary-nav .nav__link > a {
   margin: auto auto auto 1rem;
+  gap: 0.5rem;
   padding: 0;
 }
 
@@ -650,6 +706,7 @@ nav#primary-nav .nav__container {
     margin: 1rem 0;
   }
   nav#primary-nav {
+    height: auto;
     position: relative;
     transform: translateX(0);
   }
@@ -732,52 +789,13 @@ nav#primary-nav.slide-in {
   -webkit-animation: slideIn 300ms 1 forwards;
 }
 
-@keyframes slideOut {
-  to {
-    transform: translateX(0);
-  }
-}
-@keyframes slideIn {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100vw);
-  }
-}
-.fade-in ~ #scrim {
-  animation: fadeIn 1s 1 forwards;
-  -webkit-animation: fadeIn 300ms 1 forwards;
-}
-
-.fade-out ~ #scrim {
-  animation: fadeOut 1s 1 forwards;
-  -webkit-animation: fadeOut 300ms 1 forwards;
-}
-
-@keyframes fadeIn {
-  0% {
-    visibility: hidden;
-    opacity: 0;
-  }
-  100% {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-@keyframes fadeOut {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  100% {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
 /* -----------
   EMAIL CONTENT VIEW
 /----------- */
+#email__content-view > * {
+  padding: 0 0.5rem;
+}
+
 .email__content {
   position: fixed;
   bottom: 0;
@@ -795,7 +813,9 @@ nav#primary-nav.slide-in {
 #email__subject {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: center;
   border-radius: 0.5rem;
+  gap: 0.5rem;
   height: 100%;
   height: 100%;
 }
@@ -820,7 +840,6 @@ div#email__sender #sender__actions {
     border-left: 1px solid var(--border);
     width: 43.75vw;
     overflow: hidden;
-    padding: 0 1rem;
   }
 }
 #sender-icon {
@@ -853,6 +872,16 @@ div#email__sender #sender__actions {
   pointer-events: none;
   -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
   mask: url(/assets/svg/star-outline.svg) no-repeat center;
+}
+
+.search-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/search-icon.svg) no-repeat center;
+  mask: url(/assets/svg/search-icon.svg) no-repeat center;
 }
 
 .checkmark-icon {
@@ -913,6 +942,36 @@ div#email__sender #sender__actions {
   pointer-events: none;
   -webkit-mask: url(/assets/svg/more-icon.svg) no-repeat center;
   mask: url(/assets/svg/more-icon.svg) no-repeat center;
+}
+
+.compose-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/compose-icon.svg) no-repeat center;
+  mask: url(/assets/svg/compose-icon.svg) no-repeat center;
+}
+
+.draft-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/draft-icon.svg) no-repeat center;
+  mask: url(/assets/svg/draft-icon.svg) no-repeat center;
+}
+
+.inbox-icon {
+  display: block;
+  background: rgb(var(--dark-gray));
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/inbox-icon.svg) no-repeat center;
+  mask: url(/assets/svg/inbox-icon.svg) no-repeat center;
 }
 
 .icon-btn {
