--- a/globals.scss
+++ b/globals.scss
@@ -25,6 +25,32 @@ body {
   font-optical-sizing: auto;
 }
 
+main[data-theme='long'] .email__details {
+  --compact-grid: 1fr / 0 25% minmax(auto, 948px) min-content;
+  --compact-flow: row;
+}
+
+main[data-theme='compact'] .email__details {
+  --compact-grid: 0 1fr 1fr / 1fr min-content;
+  --compact-flow: column;
+}
+
+
+// @include responsize("mobile") {
+//   .email__details {
+//     grid-auto-flow: column;
+//     grid-template: 0 1fr 1fr / 1fr min-content;
+//   }
+// }
+
+// @include responsize("tablet") {
+//   .email__details {
+//     grid-auto-flow: row;
+//     grid-template: 1fr / 0 25% minmax(auto, 948px) min-content;
+//   }
+// }
+
+
 /* ---- Breakpoints ---- */
 
 $breakpoints: (
