--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ body {
   font-optical-sizing: auto;
 }
 
+main[data-theme=long] .email__details {
+  --compact-grid: 1fr / 0 25% minmax(auto, 948px) min-content;
+  --compact-flow: row;
+}
+
+main[data-theme=compact] .email__details {
+  --compact-grid: 0 1fr 1fr / 1fr min-content;
+  --compact-flow: column;
+}
+
 /* ---- Breakpoints ---- */
 /* ---- Mobile / Desktop Hidden ---- */
 .mobile-hidden {
@@ -582,7 +592,8 @@ time.email__datetime::before {
 .email__details {
   display: grid;
   width: 100%;
-  padding: 0.5rem 0;
+  height: 60%;
+  padding: 0.25rem 0;
 }
 .email__details > * {
   border-radius: 0;
@@ -621,18 +632,11 @@ time.email__datetime::before {
 /**
 TODO: Instead of a breakpoint this could be a theme switch from compact to condensed
 */
-@media screen and (min-width: 375px) {
-  .email__details {
-    grid-auto-flow: column;
-    grid-template: 0 1fr 1fr/1fr min-content;
-  }
+.email__details {
+  grid-template: var(--compact-grid);
+  grid-auto-flow: var(--compact-flow);
 }
-@media screen and (min-width: 768px) {
-  .email__details {
-    grid-auto-flow: row;
-    grid-template: 1fr/0 25% minmax(auto, 948px) min-content;
-  }
-}
+
 /* -----------
   MISC
 /----------- */
